--- a/tailwind.css
+++ b/tailwind.css
@@ -9,3 +9,8 @@
     scroll-margin-top: 7rem;
   }
 }
+@layer components {
+  .show-personal {
+    @apply bg-white/20 border border-white/30 rounded-3xl px-4 py-3 shadow-[0_10px_40px_-18px_rgba(34,211,238,0.2)] backdrop-blur-2xl;
+  }
+}
